fix: scope homepage CORS to public APIs